<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    tools:context=".SecondFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_monthly_mortgage_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/label_monthly_mortgage_payments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_monthly_mortgage_payments"
            android:textSize="48sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/monthly_mortgage_payments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_mortgage_payments"
            android:textSize="48sp"
            app:layout_constraintStart_toEndOf="@+id/label_monthly_mortgage_payments"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollview_mortgage_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="420dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_monthly_mortgage_payment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_mortgage_principal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/label_mortgage_principal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_mortgage_principal"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_width="match_parent" />

                <EditText
                    android:id="@+id/mortgage_principal_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:autofillHints="none"
                    android:ems="10"
                    android:hint="@string/hint_mortgage_principal"
                    android:inputType="numberDecimal"
                    app:layout_constraintTop_toBottomOf="@+id/label_mortgage_principal"
                    tools:layout_height="48dp"
                    tools:layout_width="match_parent" />

                <TextView
                    android:id="@+id/help_mortgage_principal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_mortgage_principal"
                    app:layout_constraintTop_toBottomOf="@+id/mortgage_principal_amount"
                    tools:layout_width="match_parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_interest_rate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="24dp"
                android:paddingBottom="16dp"
                app:layout_constraintTop_toBottomOf="@+id/layout_mortgage_principal">

                <TextView
                    android:id="@+id/label_interest_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_interest_rate"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_width="match_parent" />

                <Spinner
                    android:id="@+id/interest_rate_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/label_interest_rate"
                    tools:layout_height="48dp"
                    tools:layout_width="match_parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_amortization_period"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="24dp"
                android:paddingBottom="16dp"
                app:layout_constraintTop_toBottomOf="@+id/layout_interest_rate">

                <TextView
                    android:id="@+id/label_amortization_period"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_amortization_period"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_width="match_parent" />

                <EditText
                    android:id="@+id/amortization_period"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:autofillHints="none"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:text="@string/default_amortization_period"
                    app:layout_constraintTop_toBottomOf="@+id/label_amortization_period"
                    tools:layout_height="48dp"
                    tools:layout_width="match_parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_action_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent">


        <Button
            android:id="@+id/calculate_mortgage_payment"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary_dark"
            android:text="@string/text_calculate_mortgage_button"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
